--- a/package.json
+++ b/package.json
@@ -24,8 +24,11 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
+    "@types/node": "^22.14.1",
+    "@types/react": "^19.1.2",
+    "@types/react-dom": "^19.1.2",
+    "@types/react-redux": "^7.1.34",
+    "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.14",
     "eslint": "^9.21.0",
@@ -35,6 +38,7 @@
     "msw": "^1.3.5",
     "postcss": "^8.4.24",
     "tailwindcss": "^3.3.3",
+    "typescript": "^5.8.3",
     "vite": "^6.2.0"
   },
   "msw": {
